--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -30,15 +30,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All prereqs installed.\n",
+      "Package                 Version\n",
+      "----------------------- -----------\n",
+      "appnope                 0.1.4\n",
+      "asttokens               3.0.0\n",
+      "comm                    0.2.2\n",
+      "contourpy               1.3.2\n",
+      "cycler                  0.12.1\n",
+      "debugpy                 1.8.14\n",
+      "decorator               5.2.1\n",
+      "executing               2.2.0\n",
+      "fonttools               4.58.5\n",
+      "ipykernel               6.29.5\n",
+      "ipython                 9.4.0\n",
+      "ipython_pygments_lexers 1.1.1\n",
+      "jedi                    0.19.2\n",
+      "jupyter_client          8.6.3\n",
+      "jupyter_core            5.8.1\n",
+      "kiwisolver              1.4.8\n",
+      "matplotlib              3.10.3\n",
+      "matplotlib-inline       0.1.7\n",
+      "nest-asyncio            1.6.0\n",
+      "numpy                   2.3.1\n",
+      "packaging               25.0\n",
+      "parso                   0.8.4\n",
+      "pexpect                 4.9.0\n",
+      "pillow                  11.3.0\n",
+      "pip                     24.3.1\n",
+      "platformdirs            4.3.8\n",
+      "prompt_toolkit          3.0.51\n",
+      "psutil                  7.0.0\n",
+      "ptyprocess              0.7.0\n",
+      "pure_eval               0.2.3\n",
+      "Pygments                2.19.2\n",
+      "pyparsing               3.2.3\n",
+      "python-dateutil         2.9.0.post0\n",
+      "pyzmq                   27.0.0\n",
+      "six                     1.17.0\n",
+      "stack-data              0.6.3\n",
+      "tornado                 6.5.1\n",
+      "traitlets               5.14.3\n",
+      "wcwidth                 0.2.13\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "TEXT = \"At three o’clock precisely I was at Baker Street, but Holmes had not yet returned. The landlady informed me that he had left the house shortly after eight o’clock in the morning. I sat down beside the fire, however, with the intention of awaiting him, however long he might be. I was already deeply interested in his inquiry, for, though it was surrounded by none of the grim and strange features which were associated with the two crimes which I have already recorded, still, the nature of the case and the exalted station of his client gave it a character of its own. Indeed, apart from the nature of the investigation which my friend had on hand, there was something in his masterly grasp of a situation, and his keen, incisive reasoning, which made it a pleasure to me to study his system of work, and to follow the quick, subtle methods by which he disentangled the most inextricable mysteries. So accustomed was I to his invariable success that the very possibility of his failing had ceased to enter into my head.\".lower()\n",
     "letter_freq = dict(Counter(TEXT))\n",
     "\n",
-    "# make a bar plot with an appropriate title, correct xtick labels, and labeled axes"
+    "# make a bar plot with an appropriate title, correct xtick labels, and labeled axes\n",
+    "# Create and activate a Python virtual environment. \n",
+    "# Before starting the project, try all these imports FIRST\n",
+    "# Address any errors you get running this code cell \n",
+    "# by installing the necessary packages into your active Python environment.\n",
+    "# Try to resolve issues using your materials and the web.\n",
+    "# If that doesn't work, ask for help in the discussion forums.\n",
+    "# You can't complete the exercises until you import these - start early! \n",
+    "# We also import Counter and randint (included in the Python Standard Library).\n",
+    "\n",
+    "from collections import Counter\n",
+    "from random import randint\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print('All prereqs installed.')\n",
+    "!pip list"
    ]
   },
   {
@@ -90,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -104,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
